test/types/cptr/c-ptr-void-non-nilable-cast-2.good
c-ptr-void-non-nilable-cast-2.chpl:3: In function 'main':
c-ptr-void-non-nilable-cast-2.chpl:7: error: invalid cast from c_ptr(void) to unmanaged MyClass - cast to unmanaged MyClass? instead
